--- a/growprogress-junior-product-engineer-skills-test-94cfe27f75b4/index.html
+++ b/growprogress-junior-product-engineer-skills-test-94cfe27f75b4/index.html
@@ -141,7 +141,7 @@
                 <div class="col-md-9 px-0 py-5">
                     <div class="container">
                         <div class="text-right mb-2">
-                            <button class="btn btn-dark btn-sm" id="help-button">?</button>
+                            <button class="btn btn-dark btn-sm" id="help-button" data-toggle="modal" data-target="#contact_dialog">?</button>
                         </div>
 
                         <div id="platform-widgets">
@@ -197,17 +197,14 @@
                 to these critical voters. If you have any feedback or questions, please fill
                 out the form below to send questions or comments to our support team.</p>
         </div>
-    </header>
-    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#contact_dialog">Contact</button>
-     
+
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#contact_dialog">Contact</button>
+    </header> 
 <!-- the div that represents the modal dialog -->
 <div class="modal fade" id="contact_dialog" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Enter your name</h4>
-            </div>
+    
                 <div class="modal-body">
                     <form id="contact_form" action="/onlinejson/test.php" method="POST">
                         First name: <input type="text" name="first_name" required><br/>
