adding driver.js

--- a/growprogress-junior-product-engineer-skills-test-94cfe27f75b4/index.html
+++ b/growprogress-junior-product-engineer-skills-test-94cfe27f75b4/index.html
@@ -20,6 +20,8 @@
         crossorigin="anonymous"></script>
 
     <!-- IMPORT YOUR DEPENDENCIES HERE -->
+    <script src="https://unpkg.com/driver.js/dist/driver.min.js"></script>
+<link rel="stylesheet" href="https://unpkg.com/driver.js/dist/driver.min.css">
 
     <!-- END DEPENDENCY IMPORT -->
 </head>
