adding Take a tour button

--- a/growprogress-junior-product-engineer-skills-test-94cfe27f75b4/index.html
+++ b/growprogress-junior-product-engineer-skills-test-94cfe27f75b4/index.html
@@ -181,7 +181,10 @@
                                     neque convallis a cras semper auctor neque vitae. Elit sed vulputate mi sit amet
                                     mauris commodo quis. Ipsum consequat nisl vel pretium lectus quam id. Et odio
                                     pellentesque diam volutpat commodo sed.</p>
-                            </div>
+                            <br/>
+                                    <p>If you need help navigating
+this dashboard, please click the 'Take the Tour' button below.</p>
+                                </div>
                         </div>
                     </div>
                 </div>
@@ -197,8 +200,10 @@
             <p class="lead pb-4">This dashboard provides amazing insight into your
                 target audience. Use this dashboard to get an idea as to what matters most
                 to these critical voters. If you have any feedback or questions, please fill
-                out the form below to send questions or comments to our support team.</p>
-        </div>
+                out the form below to send questions or comments to our support team.</p><br/>
+            <p class="lead pb-4">If you need help navigating
+this dashboard, please click the 'Take the Tour' button below.</p>
+            </div>
 
     <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#contact_dialog">Contact</button>
     </header> 
@@ -218,6 +223,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Take a tour</button>
                     <button type="button" id="submitForm" class="btn btn-default">Send</button>
                 </div>
             </div>
