--- a/growprogress-junior-product-engineer-skills-test-94cfe27f75b4/index.html
+++ b/growprogress-junior-product-engineer-skills-test-94cfe27f75b4/index.html
@@ -223,7 +223,7 @@ this dashboard, please click the 'Take the Tour' button below.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Take a tour</button>
+                    <button type="button" id ="tour" class="btn btn-default" data-dismiss="modal">Take a tour</button>
                     <button type="button" id="submitForm" class="btn btn-default">Send</button>
                 </div>
             </div>
