--- a/growprogress-junior-product-engineer-skills-test-94cfe27f75b4/index.html
+++ b/growprogress-junior-product-engineer-skills-test-94cfe27f75b4/index.html
@@ -21,7 +21,12 @@
 
     <!-- IMPORT YOUR DEPENDENCIES HERE -->
     <script src="https://unpkg.com/driver.js/dist/driver.min.js"></script>
-<link rel="stylesheet" href="https://unpkg.com/driver.js/dist/driver.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/driver.js/dist/driver.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <!-- <script src="./assets/onboarding.js"></script> -->
+
 
     <!-- END DEPENDENCY IMPORT -->
 </head>
@@ -49,7 +54,8 @@
                             <h5>Sidebar Content</h5>
                         </div>
 
-                        <div id="sidebar-filters">
+                        <div id="sidebar-filters" title="sidebar Content" data-content="Sidebar" data-trigger="hover"
+                            data-toggle="popover">
                             <div class="mb-2">
                                 <label>Age</label>
                                 <select style="width: 100%">
@@ -143,7 +149,8 @@
                 <div class="col-md-9 px-0 py-5">
                     <div class="container">
                         <div class="text-right mb-2">
-                            <button class="btn btn-dark btn-sm" id="help-button" data-toggle="modal" data-target="#contact_dialog">?</button>
+                            <button class="btn btn-dark btn-sm" id="help-button" data-toggle="modal"
+                                data-target="#contact_dialog">?</button>
                         </div>
 
                         <div id="platform-widgets">
@@ -181,10 +188,10 @@
                                     neque convallis a cras semper auctor neque vitae. Elit sed vulputate mi sit amet
                                     mauris commodo quis. Ipsum consequat nisl vel pretium lectus quam id. Et odio
                                     pellentesque diam volutpat commodo sed.</p>
-                            <br/>
-                                    <p>If you need help navigating
-this dashboard, please click the 'Take the Tour' button below.</p>
-                                </div>
+                                <br />
+                                <p>If you need help navigating
+                                    this dashboard, please click the 'Take the Tour' button below.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -200,30 +207,32 @@ this dashboard, please click the 'Take the Tour' button below.</p>
             <p class="lead pb-4">This dashboard provides amazing insight into your
                 target audience. Use this dashboard to get an idea as to what matters most
                 to these critical voters. If you have any feedback or questions, please fill
-                out the form below to send questions or comments to our support team.</p><br/>
+                out the form below to send questions or comments to our support team.</p><br />
             <p class="lead pb-4">If you need help navigating
-this dashboard, please click the 'Take the Tour' button below.</p>
-            </div>
+                this dashboard, please click the 'Take the Tour' button below.</p>
+        </div>
 
-    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#contact_dialog">Contact</button>
-    </header> 
-<!-- the div that represents the modal dialog -->
-<div class="modal fade" id="contact_dialog" role="dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-    
+        <button type="button" class="btn btn-info btn-lg" data-toggle="modal"
+            data-target="#contact_dialog">Contact</button>
+    </header>
+    <!-- the div that represents the modal dialog -->
+    <div class="modal fade" id="contact_dialog" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+
                 <div class="modal-body">
                     <form id="contact_form" action="/onlinejson/test.php" method="POST">
-                        First name: <input type="text" name="first_name" required><br/>
-                        Last name: <input type="text" name="last_name" required><br/>
-                        Email: <input type="email" name="email" required><br/>
-                        Message: <textarea name="message" cols="30" rows="10" required></textarea><br/>
-                       
+                        First name: <input type="text" name="first_name" required><br />
+                        Last name: <input type="text" name="last_name" required><br />
+                        Email: <input type="email" name="email" required><br />
+                        Message: <textarea name="message" cols="30" rows="10" required></textarea><br />
+
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" id ="tour" class="btn btn-default" data-dismiss="modal">Take a tour</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal"
+                        data-target="#sidebar-content">Take a tour</button>
                     <button type="button" id="submitForm" class="btn btn-default">Send</button>
                 </div>
             </div>
@@ -232,6 +241,9 @@ this dashboard, please click the 'Take the Tour' button below.</p>
 
 
     <!-- END BOOTSTRAP MODAL -->
+
+    <script src="./assets/onboarding.js"></script>
+
 </body>
 
 </html>
