change title font

--- a/growprogress-junior-product-engineer-skills-test-94cfe27f75b4/index.html
+++ b/growprogress-junior-product-engineer-skills-test-94cfe27f75b4/index.html
@@ -202,7 +202,7 @@
     <!-- ADD BOOTSTRAP MODAL HERE -->
     <header class="jumbotron jumbotron-fluid">
         <div class="container-fluid text-center">
-            <h1 class="display-3">Welcome to the Grow Progress Platform</h1>
+            <h3>Welcome to the Grow Progress Platform</h3>
 
             <p class="lead pb-4">This dashboard provides amazing insight into your
                 target audience. Use this dashboard to get an idea as to what matters most
@@ -231,8 +231,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal"
-                        data-target="#sidebar-content">Take a tour</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" data-toggle="popover" data-content="Content">Take a tour</button>
                     <button type="button" id="submitForm" class="btn btn-default">Send</button>
                 </div>
             </div>
